Command Pattern Added
Undo/Redo options.