@@ -1,9 +1,12 @@
-package app.Controller;
+package app.Controller.Text;
 
+import app.Controller.Position.Positioner;
 import app.Model.*;
+import app.Model.Command.CommandList;
 import javafx.beans.binding.Bindings;
 import javafx.beans.binding.ObjectBinding;
 import javafx.collections.ListChangeListener;
+import javafx.collections.ObservableList;
 import javafx.collections.transformation.FilteredList;
 import javafx.geometry.Bounds;
 import javafx.geometry.Orientation;
@@ -11,10 +14,12 @@ import javafx.scene.Group;
 import javafx.scene.Scene;
 import javafx.scene.control.ScrollBar;
 import javafx.scene.control.ScrollPane;
+import javafx.scene.input.ClipboardContent;
 import javafx.scene.input.KeyEvent;
 import javafx.scene.text.Font;
 import javafx.stage.Stage;
 import javafx.util.Pair;
+
 import java.util.ArrayList;
 import java.util.HashMap;
 
@@ -26,14 +31,26 @@ public class TextManipulator {
     public Positioner positioner;
     public Cursor cursor;
     public ScrollPane textWindow;
-    public final ArrayList<Pair<Node, Boolean>> pairSelection;
-    public final Clipboard clipboard;
+    public ArrayList<Pair<Node, Boolean>> pairSelection;
+
+    public Clipboard clipboard;
+    public final javafx.scene.input.Clipboard systemClipboard;
+    public final ClipboardContent systemClipboardContent;
+
+    public ObservableList<SelectableNode> copiedSelection;
+    public ArrayList<Pair<Node, Boolean>> copiedPairList;
+
     public HashMap<MyText, Node> hashMap;
     public HashMap<Integer, Node> hashMapIdx;
+    public CommandList commandList;
     private int lineCounter;
+    public ScrollBar scrollBar;
+
+    public Boolean toInsertSelection;
 
     public TextManipulator(Stage stage, Scene scene, Group group, LinkedList linkedText, Positioner positioner,
-                           Cursor cursor, ScrollPane textWindow, HashMap<MyText, Node> hashMap, HashMap<Integer, Node> hashMapIdx) {
+                           Cursor cursor, ScrollPane textWindow, HashMap<MyText, Node> hashMap, HashMap<Integer, Node> hashMapIdx,
+                           CommandList commandList) {
         this.stage = stage;
         this.scene = scene;
         this.group = group;
@@ -43,13 +60,20 @@ public class TextManipulator {
         this.textWindow = textWindow;
         this.pairSelection = new ArrayList<>();
         this.clipboard = new Clipboard();
+        this.systemClipboard = javafx.scene.input.Clipboard.getSystemClipboard();
+        this.systemClipboardContent = new ClipboardContent();
+        this.copiedSelection = null;
+        this.copiedPairList = null;
         this.hashMap = hashMap;
         this.hashMapIdx = hashMapIdx;
+        this.commandList = commandList;
         this.lineCounter = 0;
+        this.toInsertSelection = false;
+        this.scrollBar = null;
     }
 
     /** ************************************************************************ **/
-    /** ------------------------ ADD/DELETE TEXT TO GROUP ------------------------ **/
+    /** ------------------------ ADD/DELETE TEXT TO/FROM GROUP ------------------------ **/
     public void addToGroup(Node node) {
         group.getChildren().add(node.getData());
         group.getChildren().add(node.getData().getBackground());
@@ -63,15 +87,7 @@ public class TextManipulator {
 
 
     /** ************************************************************************ **/
-    /** ------------------------ CREATE/DELETE TEXT ------------------------ **/
-    public void createLetter(String letter, String fontName, int fontSize) {
-        MyText text = createLetter_simplified(letter, fontName, fontSize);
-        // Insert node into linkedList, update position and save it in a hashMap
-        if (!pairSelection.isEmpty()) {
-            deleteSelection();
-        }
-        linkedText.insertAt(text, positioner);
-    }
+    /** ---------------------------- CREATE LETTER ----------------------------- **/
 
     // Without changing current node and cursor/caret
     public MyText createLetter_simplified (String letter, String fontName, int fontSize) {
@@ -81,51 +97,73 @@ public class TextManipulator {
         return text;
     }
 
-    public void deleteLetter(String key) {
+    public MyText createLetter(String letter, String fontName, int fontSize) {
+        MyText text = createLetter_simplified(letter, fontName, fontSize);
+        // Insert node into linkedList, update position and save it in a hashMap
+        if (!pairSelection.isEmpty() && !toInsertSelection) {
+            deleteSelection();
+        }
+        linkedText.insertAt(text, positioner);
+        return text;
+    }
+
+
+    /** --------------------------- DELETE LETTER ----------------------------- **/
+
+    public Node deleteLetter(String key) {
         Node currentNode = positioner.getCurrentNode();
-        if (!clipboard.getSelectedItems().isEmpty() || currentNode == null) return;
+        if (!clipboard.getSelectedItems().isEmpty() || currentNode == null) return null;
 
         switch (key) {
             case "BACK_SPACE" -> {
                 Node node = linkedText.deleteAt_BACKSPACE(currentNode, positioner);
-                //if (node.getPrev().getData().getText().equals(""))
                 if (node != null) {
                     deleteFromGroup(node);
                 }
-                positioner.updatePosition();
+                return node;
             }
             case "DELETE" -> {
                 Node node = linkedText.deleteAt_DELETE(currentNode, positioner);
                 if (node != null) {
                     deleteFromGroup(node);
                 }
-                positioner.updatePosition();
+                return node;
             }
         }
+        return null;
     }
 
-    public void deleteSelection() {
-        if (clipboard.getSelectedItems().isEmpty()) return;
+    /** ---------------------------- DELETE SELECTION ----------------------------- **/
+
+    public ArrayList<Node> deleteSelection() {
+        if (clipboard.getSelectedItems().isEmpty() || clipboard.getSelectedItems().size() < 2) return null;
 
         Node start = hashMap.get(pairSelection.get(0).getKey().getData());
         Node end = hashMap.get(pairSelection.get(1).getKey().getData());
         String direction = decideDirection();
 
+        ArrayList<Node> deletedNodes = new ArrayList<>();
+
         for (SelectableNode text : clipboard.getSelectedItems()) {
             Node node = hashMap.get(text);
-            linkedText.deleteAt_simplified(node);
+            if (node == null) break;
+            Node deletedNode = linkedText.deleteAt_simplified(node);
+            deletedNodes.add(deletedNode);
             deleteFromGroup(node);
         }
 
-        if (linkedText.isEmpty()) positioner.setCurrentNode(null);
+        if (linkedText.isEmpty()) {
+            positioner.setCurrentNode(null);
+        }
 
         if (direction.equals("UP/LEFT")) {
-            if (linkedText.isAtBeginning(end.getPrev())) {
-                positioner.setCurrentNode(linkedText.getFirst());
-                if (pairSelection.get(1).getValue()) {
+            if (end.getData().getX() == 0 && pairSelection.get(1).getValue()) {
+                if (linkedText.isAtBeginning(end.getPrev())) {
+                    positioner.setCurrentNode(start.getNext());
                     positioner.setCursorIsAtStart(true);
                 }
                 else {
+                    positioner.setCurrentNode(end.getPrev());
                     positioner.setCursorIsAtStart(false);
                 }
             }
@@ -135,13 +173,10 @@ public class TextManipulator {
             }
         }
         else { // "DOWN/RIGHT"
-            if (linkedText.isAtBeginning(start.getPrev())) {
-                positioner.setCurrentNode(linkedText.getFirst());
-                if (pairSelection.get(0).getValue()) {
+            if (start.getData().getX() == 0 && pairSelection.get(0).getValue()) {
+                if (linkedText.isAtBeginning(start.getPrev())) {
+                    positioner.setCurrentNode(end.getNext());
                     positioner.setCursorIsAtStart(true);
-                }
-                else {
-                    positioner.setCursorIsAtStart(false);
                 }
             }
             else {
@@ -152,6 +187,7 @@ public class TextManipulator {
         positioner.updatePosition();
         clipboard.unselectAll();
         pairSelection.clear();
+        return deletedNodes;
     }
 
 
@@ -161,6 +197,10 @@ public class TextManipulator {
 
         Node currentNode = positioner.getCurrentNode();
         if (currentNode == null) return;
+        if (!clipboard.getSelectedItems().isEmpty() && !keyEvent.isShiftDown()) {
+            clipboard.unselectAll();
+            //Treturn;
+        }
 
         // Initial position before move
         if (keyEvent.isShiftDown() && !pairSelection.isEmpty()) {
@@ -170,47 +210,69 @@ public class TextManipulator {
         switch (direction) {
 
             case "LEFT" -> {
-                if (!linkedText.isAtBeginning(currentNode.getPrev())) {
-                    // If letter is at the beginning of a line
-                    if (currentNode.getData().getX() == 0) {
-                        if (positioner.getCursorIsAtStart()) {
+                if (linkedText.isAtBeginning(currentNode.getPrev()) && positioner.getCursorIsAtStart()) return;
+                // If letter is at the beginning of a line
+                if (currentNode.getData().getX() == 0) {
+                    if (!positioner.getCursorIsAtStart()) {
+                        if (currentNode.getData().getText().equals("")) {
                             positioner.setCurrentNode(currentNode.getPrev());
                             positioner.setCursorIsAtStart(false);
                         }
-                        else positioner.setCursorIsAtStart(true);
+                        else {
+                            positioner.setCursorIsAtStart(true);
+                        }
                     }
+                    // Cursor at start
                     else {
-                        positioner.setCurrentNode(currentNode.getPrev());
+                        if (currentNode.getPrev().getData().getText().equals("")) {
+                            positioner.setCurrentNode(currentNode.getPrev().getPrev());
+                            positioner.setCursorIsAtStart(false);
+                        }
+                        else {
+                            positioner.setCurrentNode(currentNode.getPrev());
+                            positioner.setCursorIsAtStart(false);
+                        }
                     }
                 }
+                // If it's not at beginning of a line
                 else {
-                    if (!positioner.getCursorIsAtStart()) {
-                        positioner.setCursorIsAtStart(true);
-                    }
+                    positioner.setCurrentNode(currentNode.getPrev());
+                    positioner.setCursorIsAtStart(false);
                 }
                 positioner.updatePosition();
             }
 
             case "RIGHT" -> {
-                if (!linkedText.isAtEnd(currentNode.getNext())) {
-                    // If letter is at the beginning of a line
-                    System.out.println("Right: " + currentNode.getData());
-                    if (currentNode.getData().getX() == 0 && positioner.getCursorIsAtStart()) {
-                        positioner.setCursorIsAtStart(false);
-                        return;
+                if (linkedText.isAtEnd(currentNode.getNext())) return;
+                // If letter is at the beginning of a line
+                if (currentNode.getData().getX() == 0) {
+                    if (positioner.getCursorIsAtStart()) {
+                        if (currentNode.getData().getText().equals("")) {
+                            positioner.setCurrentNode(currentNode.getNext());
+                            if (currentNode.getNext().getData().getY() > currentNode.getData().getY()) {
+                                positioner.setCursorIsAtStart(true);
+                            }
+                            else {
+                                positioner.setCursorIsAtStart(false);
+                            }
+                        }
+                        else {
+                            positioner.setCursorIsAtStart(false);
+                        }
                     }
                     else {
                         positioner.setCurrentNode(currentNode.getNext());
-                    }
-                    // If letter is at the end of a line
-                    if (currentNode.getNext().getData().getY() > currentNode.getData().getY()) {
-                        positioner.setCurrentNode(currentNode.getNext());
-                        positioner.setCursorIsAtStart(true);
-                    }
-                    else {
-                        positioner.setCurrentNode(currentNode.getNext());
                         positioner.setCursorIsAtStart(false);
                     }
+                }
+                // If letter is at the end of a line
+                else if (currentNode.getNext().getData().getY() > currentNode.getData().getY()) {
+                    positioner.setCurrentNode(currentNode.getNext());
+                    positioner.setCursorIsAtStart(true);
+                }
+                else {
+                    positioner.setCurrentNode(currentNode.getNext());
+                    positioner.setCursorIsAtStart(false);
                 }
                 positioner.updatePosition();
             }
@@ -253,7 +315,6 @@ public class TextManipulator {
     }
 
     private Node findSwitchedNode(double centerX, double centerY, double letterHeight) {
-        Node result;
         // Determine what line did the user click on using y coord
         Integer lineNum = Math.floorDiv((int)centerY, (int)letterHeight);
         Node lineNode = hashMapIdx.get(lineNum); // first node on a line
@@ -261,19 +322,16 @@ public class TextManipulator {
             return null;
         }
         // Traverse through line to find the closest x coord
-        Boolean found = false;
         while ((int)lineNode.getData().getY() == lineNum*(int)letterHeight) {
-            found = checkBoundaries(lineNode.getData(), centerX);
+            Boolean found = checkBoundaries(lineNode.getData(), centerX);
             if (found) {
-                result = lineNode;
                 //System.out.println("Closest node found (T=0): " + result);
-                return result;
+                return lineNode;
             }
             lineNode = lineNode.getNext();
-            if ( ((int)lineNode.getNext().getData().getY() != lineNum*(int)letterHeight) || linkedText.isAtEnd(lineNode.getNext())) {
-                result = lineNode;
+            if ( ((int)lineNode.getData().getY() != lineNum*(int)letterHeight) || linkedText.isAtEnd(lineNode)) {
                 //System.out.println("Closest node found (T=0): " + result);
-                return result;
+                return lineNode.getPrev();
             }
         }
         return null;
@@ -284,17 +342,18 @@ public class TextManipulator {
         double posX = currentNode.getData().getX();
         double posY = currentNode.getData().getY();
         double letterHeight = currentNode.getData().getLayoutBounds().getHeight();
+        double letterWidth = currentNode.getData().getLayoutBounds().getWidth();
 
         switch (direction) {
 
             case "DOWN" -> {
-                double centerPointX = posX; // + letterWidth/2
+                double centerPointX = posX + letterWidth/2;
                 double centerPointY = posY + letterHeight + letterHeight/2;
                 return findSwitchedNode(centerPointX, centerPointY, letterHeight);
             }
 
             case "UP" -> {
-                double centerPointX = posX; //+ letterWidth/2
+                double centerPointX = posX + letterWidth/2;
                 double centerPointY = posY - letterHeight/2;
                 return findSwitchedNode(centerPointX, centerPointY, letterHeight);
             }
@@ -357,7 +416,7 @@ public class TextManipulator {
                         node = node.getNext();
                     }
                     if (positioner.getCursorIsAtStart()) clipboard.select(node.getData(), false);
-                    System.out.println(positioner.getCurrentNode().getData());
+                    //System.out.println(positioner.getCurrentNode().getData());
 
                 }
             }
@@ -381,35 +440,80 @@ public class TextManipulator {
 
 
     /** ************************************************************************ **/
+    /** ------------------------ SYSTEM CLIPBOARD ------------------------ **/
+
+    public void copyText() {
+        // Copy text to system clipboard
+        String text = "";
+        for (SelectableNode myText : clipboard.getSelectedItems()) {
+            Node selectedNode = hashMap.get(myText);
+            String selectedText = selectedNode.getData().getText();
+            if (selectedText.equals("")) {
+                selectedText = "" + '\n';
+            }
+            text = text + selectedText;
+        }
+        if (decideDirection().equals("UP/LEFT")) {
+            text = new StringBuilder(text).reverse().toString();
+        }
+        systemClipboardContent.putString(text);
+        systemClipboard.setContent(systemClipboardContent);
+    }
+
+    public String getTextFromClipboard() {
+        String text = null;
+        try {
+            text = systemClipboardContent.getString();
+        }
+        catch (Exception e) {
+            System.out.println("Error getting system clipboard: " + e);
+        }
+
+        if (text == null) {
+            /** Clipboard system selection **/
+            //text = (String) Toolkit.getToolkit().getSystemClipboard().getContent(DataFormat.PLAIN_TEXT);
+            System.out.println("String from Clipboard2 --- system:" + text);
+        }
+
+        if (text == null || text.isEmpty()) return null;
+        else return text;
+    }
+
+
+    /** ************************************************************************ **/
     /** ------------------------ SCROLL OPERATIONS ------------------------ **/
 
-    public Double getVisibleAmount() {
+    public void setScrollBar() {
         for (javafx.scene.Node node : textWindow.lookupAll(".scroll-bar")) {
             if (node instanceof ScrollBar) {
                 ScrollBar scrollBar = (ScrollBar) node;
                 if (scrollBar.getOrientation() == Orientation.VERTICAL) {
-                    return scrollBar.getVisibleAmount();
+                    this.scrollBar = scrollBar;
                 }
             }
         }
-        return null;
     }
 
-    public void handleScrollView(String direction) {
-        Double visAmount = getVisibleAmount();
-        if (visAmount >= 1) return;
+    public Double getVisibleAmount() {
+        return scrollBar.getVisibleAmount();
+    }
 
-        Double height = textWindow.getContent().getLayoutBounds().getHeight();
-        Integer lineHeight = (int)cursor.getSampleLetter().getLayoutBounds().getHeight();
-        Double lineDeltaY = ((height-height*visAmount) / getLineCounter())/100;
-
-        System.out.println(visAmount);
-        System.out.println("Line Delta: " + (height-height*visAmount) / getLineCounter()/100);
-
-        //double h_size = (h_maxY - letterHeight*2) / h;
-        if (direction.equals("UP")) textWindow.setVvalue(textWindow.getVvalue() - lineDeltaY);
-        else textWindow.setVvalue(textWindow.getVvalue() + lineDeltaY);
-
+    public void handleScrollView() {
+        double heightViewPort = textWindow.getViewportBounds().getHeight();
+        double heightScrollPane = textWindow.getContent().getBoundsInLocal().getHeight();
+        double y = positioner.getCurrentNode().getData().getBoundsInParent().getMaxY();
+        if (y<(heightViewPort/2)) {
+            // below 0 of scrollpane
+            textWindow.setVvalue(0);
+        }
+        else if ((y>=(heightViewPort/2))&(y<=(heightScrollPane-heightViewPort/2))) {
+            // between 0 and 1 of scrollpane
+            textWindow.setVvalue((y-(heightViewPort/2))/(heightScrollPane-heightViewPort));
+        }
+        else if (y>= (heightScrollPane-(heightViewPort/2))) {
+            // above 1 of scrollpane
+            textWindow.setVvalue(1);
+        }
     }
 
     public void showVisibleNodes() {
@@ -423,6 +527,7 @@ public class TextManipulator {
         visibleNodes.predicateProperty().bind(Bindings.createObjectBinding(() ->
                 node -> node.getBoundsInParent().intersects(visibleBounds.get()), visibleBounds));
 
+        System.out.println("********VISIBLE NODES********");
         visibleNodes.addListener((ListChangeListener.Change<? extends javafx.scene.Node> c) -> {
             visibleNodes.forEach(System.out::println);
             System.out.println();
